--- a/_includes/team.html
+++ b/_includes/team.html
@@ -11,7 +11,8 @@
                 {% for member in site.people %}
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="" width="204" height="204">
+                        <img src="img/team/{{ member.pic }}.jpg" class="img-responsive img-circle" alt="" width="204" height="204"
+                             style="width:204px;height:204px;">
                         <h4>{{ member.name }}</h4>
                         <p class="text-muted">{{ member.position }}</p>
                         <ul class="list-inline social-buttons">
