--- a/_includes/team.html
+++ b/_includes/team.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">Our Amazing Team</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h3 class="section-subheading text-muted">Meet our Scrum team.</h3>
                 </div>
             </div>
             <div class="row">
@@ -31,7 +31,8 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut eaque, laboriosam veritatis, quos non quis ad perspiciatis, totam corporis ea, alias ut unde.</p>
+                    <p class="large text-muted">Our scrum meat is an empowered, collaborative, and self organizing unit that liverages the scrum 
+                    framework to deliver high quality framework through iterative development cycles. </p>
                 </div>
             </div>
         </div>
