--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Srpint1.JPG" alt="" width="80" height="80">
+                                <img class="img-circle img-responsive" src="img/about/Srpint1.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -28,7 +28,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Sprint2.JPG" alt="" width="80" height="80">
+                                <img class="img-circle img-responsive" src="img/about/Sprint2.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -42,7 +42,7 @@
                         </li>
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Sprint3.JPG" alt="" width="80" height="80">
+                                <img class="img-circle img-responsive" src="img/about/Sprint3.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -56,7 +56,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Sprint4.JPG" alt="" width="80" height="80">
+                                <img class="img-circle img-responsive" src="img/about/Sprint4.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -70,7 +70,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Sprint5.JPG" alt="" width="80" height="80">
+                                <img class="img-circle img-responsive" src="img/about/Sprint5.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -84,7 +84,7 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Sprint6.JPG" alt="" width="80" height="80">
+                                <img class="img-circle img-responsive" src="img/about/Sprint6.JPG" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
