--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
     <!-- Custom CSS & Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
     <link rel="stylesheet" href="{{ "/style.css" | prepend: site.baseurl }}">
 
-    <link href = "{{ "images/logo.jpg" | prepend: site.baseurl }}" rel="icon" type="image/jpeg"> 
+    <link href = "{{ "images/logo.png" | prepend: site.baseurl }}" rel="icon" type="image/jpeg"> 
 
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
