--- a/_includes/about.html
+++ b/_includes/about.html
@@ -22,7 +22,7 @@
                                 <div class="timeline-body">
                                     <p class="text-muted">During this sprint we did a compartive analysis and collaborated with tools like
                                                           Telegram, Figma, Proofhub, Microsoft Office to produce a low fidelity prototype of an E-Commerce
-                                                          Website  </p>
+                                                          Website </p>
                                 </div>
                             </div>
                         </li>
@@ -36,7 +36,7 @@
                                     <h4 class="subheading">High Fidelity Protototype of the E-Commerce Website</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">During this sprint we were able to build a high fidelity prototype of the about page of  an ecommerce website. we had 5 users story done and removed 8 impediments. we were in a team of 13 members</p>
                                 </div>
                             </div>
                         </li>
@@ -50,7 +50,7 @@
                                     <h4 class="subheading">Scrum Master Exam</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Our Sprint 3 was an Assessment exam that covered a wide range of knowledge and skills related to Scrum, We also covered a Video interview where we got to answer scenario question, we had a chance to study and practice with our team members and As the Agile Warriors we passed our exams with Glappy colors</p>
                                 </div>
                             </div>
                         </li>
