--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,7 +12,7 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Srpint1.JPG" alt="" style="height:100%">
+                                <img class="img-circle img-responsive" src="img/about/Srpint1.JPG" alt="" style="height:100%;">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
@@ -36,7 +36,8 @@
                                     <h4 class="subheading">High Fidelity Protototype of the E-Commerce Website</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">During this sprint we were able to build a high fidelity prototype of the about page of  an ecommerce website. we had 5 users story done and removed 8 impediments. we were in a team of 13 members</p>
+                                    <p class="text-muted">During this sprint we were able to build a high fidelity prototype of the about page of  an ecommerce website.
+                                                             we had 5 users story done and removed 8 impediments. we were in a team of 13 members</p>
                                 </div>
                             </div>
                         </li>
@@ -50,7 +51,9 @@
                                     <h4 class="subheading">Scrum Master Exam</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Our Sprint 3 was an Assessment exam that covered a wide range of knowledge and skills related to Scrum, We also covered a Video interview where we got to answer scenario question, we had a chance to study and practice with our team members and As the Agile Warriors we passed our exams with Glappy colors</p>
+                                    <p class="text-muted">Our Sprint 3 was an Assessment exam that covered a wide range of knowledge and skills related to Scrum,
+                                                          We also covered a Video interview where we got to answer scenario question, we had a chance to study and practice
+                                                          with our team members and As the Agile Warriors we passed our exams with Glappy colors</p>
                                 </div>
                             </div>
                         </li>
@@ -78,7 +81,11 @@
                                     <h4 class="subheading">Application</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">In sprint 5, our focus is on efficiently pursuing relevant job opportunities, securing interviews,
+                                        gaining recruiter representation, and establishing valuable connections on LinkedIn. Sprint hardening involves dedicated
+                                        efforts to enhance job application materials, improve qualifications, and increase chances of securing desired positions.
+                                        By adopting a sprint hardening mindset, we optimize application materials, expand networks, and continuously improve strategies.
+                                        We had 7 users’ story done and removed any impediments. we were in a team of 13 members</p>
                                 </div>
                             </div>
                         </li>
