--- a/_includes/about.html
+++ b/_includes/about.html
@@ -67,7 +67,11 @@
                                     <h4 class="subheading">Job Readiness</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Sprint 4 was all about job readiness. we had two features which are  the pre-apply and post apply.
+                                        The user stories for the pre apply is basically everything we need to do before applying for a job which are resume,
+                                        cover letter and social media platforms(LinkedIn, Monster, Indeed etc). For the post apply user stories we did our
+                                        project stories like what did we  actually do? which brings us to the 5W1H(When, Where, What, Why, Who and How).
+                                        We also did our Artificial Intelligent(AI) which aid our application process.</p>
                                 </div>
                             </div>
                         </li>
@@ -81,7 +85,7 @@
                                     <h4 class="subheading">Application</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">In sprint 5, our focus is on efficiently pursuing relevant job opportunities, securing interviews,
+                                    <p class="text-muted">In sprint 5, our focus was on efficiently pursuing relevant job opportunities, securing interviews,
                                         gaining recruiter representation, and establishing valuable connections on LinkedIn. Sprint hardening involves dedicated
                                         efforts to enhance job application materials, improve qualifications, and increase chances of securing desired positions.
                                         By adopting a sprint hardening mindset, we optimize application materials, expand networks, and continuously improve strategies.
