--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,12 +12,12 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Srpint1.JPG" alt="" style="height:100%;">
+                                <img class="img-circle img-responsive" src="img/about/Sprint1.JPG" alt="" style="height:100%;">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
                                     <h4>Sprint 1</h4>
-                                    <h4 class="subheading">Low-Fi Glappy E-Commerce Website On Figma</h4>
+                                    <h4 class="subheading">Low-Fi E-Commerce Website On Figma</h4>
                                 </div>
                                 <div class="timeline-body">
                                     <p class="text-muted">During this sprint we did a compartive analysis and collaborated with tools like
@@ -90,20 +90,6 @@
                                         efforts to enhance job application materials, improve qualifications, and increase chances of securing desired positions.
                                         By adopting a sprint hardening mindset, we optimize application materials, expand networks, and continuously improve strategies.
                                         We had 7 users’ story done and removed any impediments. we were in a team of 13 members</p>
-                                </div>
-                            </div>
-                        </li>
-                        <li class="timeline-inverted">
-                            <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/Sprint6.JPG" alt="" style="height:100%">
-                            </div>
-                            <div class="timeline-panel">
-                                <div class="timeline-heading">
-                                    <h4>Sprint 6</h4>
-                                    <h4 class="subheading">Agile Warriors' Portfolio Website</h4>
-                                </div>
-                                <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
                                 </div>
                             </div>
                         </li>
