--- a/_includes/team.html
+++ b/_includes/team.html
@@ -31,7 +31,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">Our scrum meat is an empowered, collaborative, and self organizing unit that liverages the scrum 
+                    <p class="large text-muted">Our scrum team is an empowered, collaborative, and self organizing unit that liverages the scrum 
                     framework to deliver high quality framework through iterative development cycles. </p>
                 </div>
             </div>
