--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -8,12 +8,13 @@
                         <img src="images/logo.png" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
-                <!--
+                
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="img/logos/designmodo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="images/logo.jpg" class="img-responsive img-centered" alt="">
                     </a>
                 </div>
+                <!--
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
                         <img src="img/logos/themeforest.jpg" class="img-responsive img-centered" alt="">
