--- a/_includes/clients.html
+++ b/_includes/clients.html
@@ -5,13 +5,13 @@
             <div class="row">
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="images/logo.png" class="img-responsive img-centered" alt="">
+                        <img src="images/logo.png" class="img-responsive img-centered" alt="" width="200" alt="" height="200">
                     </a>
                 </div>
                 
                 <div class="col-md-3 col-sm-6">
                     <a href="#">
-                        <img src="images/logo.jpg" class="img-responsive img-centered" alt="">
+                        <img src="images/logo.jpg" class="img-responsive img-centered" alt="" width="200" alt="" height="200">
                     </a>
                 </div>
                 <!--
