--- a/_includes/head.html
+++ b/_includes/head.html
@@ -12,6 +12,8 @@
 
     <link href = "{{ "images/logo.png" | prepend: site.baseurl }}" rel="icon" type="image/jpeg"> 
 
+    <script src="https://smtpjs.com/v3/smtp.js"></script>
+    
     <!-- Custom Fonts -->
     <link rel="stylesheet" href="{{ "/css/font-awesome/css/font-awesome.min.css" | prepend: site.baseurl }}">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet" type="text/css">
